--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <title>The New Hall Economist</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css" />
+    <title>The New Hall Economist</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+	  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
   <div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content">
@@ -21,41 +21,38 @@
   </div>
 
   <header>
-    <h1>The New Hall Economist</h1>
-    <!--h6>Student-produced Economics Articles</h6-->
+      <!--h6>Student-produced Economics Articles</h6-->
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	  <h1>The New Hall Economist</h1>
+	  <div class="container-fluid">
+	      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+	      </button>
+	      <div class="collapse navbar-collapse" id="navbarCollapse">
+		  <ul class="navbar-nav me-auto mb-2 mb-md-0" id="tags">
+		      <li class="nav-item">
+			  <a class="nav-link" aria-current="page" href="#">Home</a>
+		      </li>
+		  </ul>
+	      </div>
+	  </div>
+      </nav>
   </header>
 
-  <section>
-      <nav>
-	  <h2>Tags</h2>
-      <!-- keywords extracted from article json go here -->
-	  <ul class="nav flex-column" id="tags">
-	  </ul>
-	  <ul class="flex-column">
-	      <li><button type="button" class="btn btn-primary"><a style="color:#fff;text-decoration:none" href="?">Reset</a></button></li>
-	  </ul>
-      </nav>
-
-    <div class="container">
-      <div id="Articles" class="row">
-        <div class="col-12">
-          <div id="articles">
-          </div>
-        </div>
+  <p></p>
+  <p></p>
+  <main class="flex-shrink-0">
+      <div class="container">
+	  <div id="articles" class="row">
+	  </div>
       </div>
-    </div>
-  </section>
+  </main>
 
-  <section>
-    <nav>
-      <ul>
-        <li><a href="#top">Back To The Top</a></li>
-      </ul>
-    </nav>
-  </section>
-
-  <footer>
-    <p>Francis Pettett</p>
+  <footer class="footer mt-auto py-3 bg-light">
+      <div class="container">
+	  <span class="text-muted"><a href="#top">Back To The Top</a> Francis Pettett</span>
+      </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
