--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	      <div class="collapse navbar-collapse" id="navbarCollapse">
 		  <ul class="navbar-nav me-auto mb-2 mb-md-0" id="tags">
 		      <li class="nav-item">
-			  <a class="nav-link" aria-current="page" href="#">Home</a>
+			  <a class="nav-link" aria-current="page" href="?">Home</a>
 		      </li>
 		  </ul>
 	      </div>
