--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		  <span class="navbar-toggler-icon"></span>
 	      </button>
 	      <div class="collapse navbar-collapse" id="navbarCollapse">
-		  <ul class="navbar-nav me-auto mb-2 mb-md-0" id="tags">
+		  <ul class="navbar-nav me-auto mb-2 mb-md-0" id="topics">
 		      <li class="nav-item">
 			  <a class="nav-link" aria-current="page" href="?">Home</a>
 		      </li>
