--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!--h6>Student-produced Economics Articles</h6-->
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-	  <h1>The New Hall Economist</h1>
+	  <h1><a href="?">The New Hall Economist</a></h1>
 	  <div class="container-fluid">
 	      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
